# manage_me

./: PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: keep-alive.yml
apps/api/: package.json  render.yaml  tsup.config.ts
apps/web/: package.json  (+2 more)
backend/: .env.example  package.json  pnpm-lock.yaml  render.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
backend-py/: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt
backend-py/alembic/: baseline.sql  env.py
backend-py/alembic/versions/: 0001_baseline.py  0002_soft_delete.py  0003_wishlist.py  0004_task_identifiers.py  0005_todo_lists.py
backend-py/app/: config.py  db.py  enums.py  errors.py  ids.py  main.py  models.py  projectkeys.py  schemas.py  timeutils.py
backend-py/app/auth/: cookies.py  deps.py  password.py  routes.py  sessions.py
backend-py/app/github/: app_auth.py  config.py  contents.py  contributions.py  crypto.py  http.py  oauth.py  repos.py  routes.py  store.py
backend-py/app/routers/: labels.py  library.py  projects.py  tasks.py  todos.py  trash.py  wishlist.py
backend-py/tests/: conftest.py  test_auth.py  test_github_appauth.py  test_github_crypto.py  test_github_data.py  test_github_routes.py  test_github_store.py  test_health.py  test_isolation.py  test_labels.py  test_library.py  test_models.py  test_password.py  test_projects.py  test_sessions.py  test_soft_delete.py  test_task_identifiers.py  test_tasks.py  test_todos.py  test_wishlist.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
(+153 files in other folders)
